# fmc

./: README.md
.cargo/: config.toml
blender_files/: torch.blend1
client/: .gitignore  Cargo.toml  build.rs
client/src/: audio.rs  chat.rs  constants.rs  game_state.rs  main.rs  networking.rs  rendering.rs  settings.rs
client/src/assets/: block_textures.rs  materials.rs  mod.rs  models.rs
client/src/player/: camera.rs  hand.rs  key_bindings.rs  mod.rs  movement.rs
client/src/player/interfaces/: interfaces.rs  items.rs  mod.rs
client/src/rendering/: chunk.rs  lighting.rs  materials.rs  mod.rs  models.rs  sky.rs
client/src/rendering/materials/: block_material.rs  pbr_material.rs  sky_material.rs
client/src/rendering/shaders/: block.wgsl  block_mesh.wgsl  mesh.wgsl  mesh_prepass.wgsl  pbr.wgsl  pbr_mesh.wgsl  pbr_new.wgsl  physical_sky.frag  physical_sky.vert  physical_sky.wgsl
client/src/ui/: hand.rs  main_menu.rs  mod.rs  multiplayer.rs  text.rs  widgets.rs
client/src/ui/client/: mod.rs  multiplayer.rs  pause_menu.rs
client/src/ui/gui/: multiplayer.rs
client/src/ui/server/: items.rs  key_bindings.rs  mod.rs  textbox.rs
client/src/utils/: direction.rs  mod.rs
client/src/world/: blocks.rs  mod.rs  sky.rs
client/src/world/world_map/: chunk.rs  chunk_manager.rs  mod.rs  world_map.rs
crates/fmc_networking/: Cargo.toml
crates/fmc_networking/src/: client.rs  lib.rs  network_message.rs  server.rs
crates/fmc_networking/src/messages/: audio.rs  connection.rs  mod.rs  player.rs
crates/fmc_noise/benches/: benchmark.rs
crates/fmc_noise/src/: square.rs
fmc_networking/: Cargo.toml
fmc_networking/src/: server.rs
fmc_networking/src/messages/: blocks.rs  connection.rs
lib/fmc_networking/: Cargo.toml
lib/fmc_networking/src/: client.rs  lib.rs  server.rs
lib/fmc_networking/src/messages/: blocks.rs  chat.rs  chunk.rs  connection.rs  interfaces.rs  mod.rs  model.rs  player.rs  ui.rs
lib/noise/: Cargo.toml
lib/noise/benches/: benchmark.rs
lib/noise/src/: abs.rs  lib.rs  noise_tree.rs  perlin.rs  simplex.rs
lib/rust-simd-noise/src/: lib.rs
server/: Cargo.toml  build.rs
server/resources/client/: commands.json
server/resources/client/blocks/: air.json  coal_ore.json  crafting_table.json  dirt.json  grass.json  leaves.json  oak.json  oak_planks.json  sand.json  stone.json  torch.json  water.json
server/resources/client/blocks/parents/: default_block.json
server/resources/client/blocks/water/: diagonal_water_1.json  diagonal_water_4.json  diagonal_water_7.json  diagonal_water_corner_down_2.json  diagonal_water_corner_down_4.json  diagonal_water_corner_down_5.json  diagonal_water_corner_down_7.json  diagonal_water_corner_up_1.json  diagonal_water_corner_up_3.json  diagonal_water_corner_up_7.json  diagonal_water_corner_up_8.json  still_water_1.json  still_water_3.json  still_water_8.json  straight_water_1.json  straight_water_5.json  straight_water_6.json  straight_water_7.json  straight_water_8.json  surface_water.json  tilted_water_2.json  tilted_water_3.json  tilted_water_5.json  tilted_water_8.json
server/resources/client/interfaces/: chat.json  death.json  hotbar.json  inventory.json
server/resources/client/items/configurations/: crafting_table.json  dirt.json  oak.json  oak_planks.json  sand.json  stick.json  torch.json
server/resources/client/materials/: air.json  water.json
server/resources/client/textures/models/: crafting_table.glb  dirt.glb  oak.glb  oak_planks.glb  sand.glb  torch.glb
server/src/: api.rs  assets.rs  chat.rs  constants.rs  database.rs  main.rs  networking.rs  settings.rs  utils.rs
server/src/bevy_extensions/f64_transform/: mod.rs  systems.rs
server/src/bevy_extensions/f64_transform/components/: global_transform.rs  transform.rs
server/src/physics/: mod.rs  shapes.rs
server/src/players/: actions.rs  health.rs  inventory.rs  life.rs  mod.rs  player.rs
server/src/world/: blocks.rs  mod.rs  models.rs  sky.rs  time.rs
server/src/world/blocks/: furnace.rs  liquids.rs  water.rs
server/src/world/items/: mod.rs
server/src/world/items/crafting/: mod.rs  shaped.rs
server/src/world/world_map/: chunk.rs  chunk_manager.rs  mod.rs  world_map.rs
server/src/world/world_map/terrain_generation/: biomes.rs  blueprints.rs  mod.rs
server/src/world/world_map/terrain_generation/features/: mod.rs  tree.rs
utils/block_to_model/src/: main.rs
utils/item_image_to_model/: iron_pickaxe.glb  model.glb  stick.glb
utils/item_image_to_model/src/: main.rs
utils/make_liquid/: liquidizer.py
utils/make_liquid/water/: diagonal_water_2.json  diagonal_water_3.json  diagonal_water_5.json  diagonal_water_6.json  diagonal_water_corner_down_1.json  diagonal_water_corner_down_3.json  diagonal_water_corner_down_6.json  diagonal_water_corner_down_8.json  diagonal_water_corner_up_2.json  diagonal_water_corner_up_4.json  diagonal_water_corner_up_5.json  diagonal_water_corner_up_6.json  still_water_10.json  still_water_2.json  still_water_4.json  still_water_5.json  still_water_6.json  still_water_7.json  still_water_9.json  straight_water_2.json  straight_water_3.json  straight_water_4.json  subsurface_water.json  tilted_water_1.json  tilted_water_4.json  tilted_water_6.json  tilted_water_7.json
