[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["dynamic_linking"]}
fmc_networking = { path = "../fmc_networking" }

futures-lite = "1.12.0"
serde = "1.0.127"
serde_json = { path = "../json"}
typetag = "0.1.7"
sha-1 = "0.9.8"
zstd = "0.12.1+zstd.1.5.2"
tar = "0.4.37"
rusqlite = "0.26.1"
image = "0.24.5"
once_cell = "1.17.0"

[build-dependencies]
tar = "0.4.37"
zstd = "0.12.1+zstd.1.5.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# flamegraph
#[profile.release]
#debug=true
