[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.2", features = []}
bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc1f33d", features = []}

fmc_networking = { path = "../lib/fmc_networking" }
serde_json = { path = "../lib/json"}

#dirs = "5.0.1"
futures-lite = "1.13.0"
serde = "1.0.188"
typetag = "0.2.13"
sha-1 = "0.10.1"
zstd = "0.12.4"
tar = "0.4.40"
rusqlite = "0.29.0"
image = "0.24.7"
once_cell = "1.18.0"
bitflags = "2.4.0"

[build-dependencies]
tar = "0.4.40"
zstd = "0.12.4"

# Enable a small amount of optimization in debug mode
#[profile.dev]
#strip = "debuginfo"
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# flamegraph
#[profile.release]
#debug=true
