[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "462d2ff", default-features=false, features = ["filesystem_watcher", "multi-threaded"]}
#bevy = { version = "0.11.2", default-features=false, features = ["filesystem_watcher"]}

fmc_networking = { path = "../lib/fmc_networking" }
serde_json = { path = "../lib/json"}
# Produces values that are slightly less than 1.0 for simplex noise.
# Idk if it's bug.
# I calculated my own scaling factors and they came out to be:
# simplex_2d: 1 / 0.02138935               = 46.75223884783782, this is same as f64 version
# simplex_3d: 1 / 0.027124329              = 36.867271444760902454618189949542284011840820312
# simplex_3d_f64: 1 / 0.010561342592592605 = 94.684931506849210336440592072904109954833984375
# The 1 is divided by the max value it produces without scaling, found by iterating over a large set.
# The simplex_3d_f64 version is NOT scaled, probably forgotten.
#
# Simplex flips between the same two values at the same position for all seeds?
#simdnoise = { git = "https://github.com/jackmott/rust-simd-noise", rev = "3a4f3e6" }
simdnoise = { path = "../lib/rust-simd-noise" }

tar = "0.4.40"
zstd = "0.12.4"
sha-1 = "0.10.1"
serde = { version = "1.0.188", features = ["derive"] }
#serde_json = "1.0.85"
bincode = "1.3.3"
typetag = "0.2.13"
futures-lite = "1.13.0"
rusqlite = { version = "0.29.0"}
rand = "0.8.5"
once_cell = "1.18.0"

[build-dependencies]
tar = "0.4.40"
zstd = "0.12.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# flamegraph
#[profile.release]
#debug=true
