[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc1f33d", default-features=false, features = ["filesystem_watcher", "multi-threaded"]}
#bevy = { version = "0.11.2", default-features=false, features = ["filesystem_watcher"]}

fmc_networking = { path = "../lib/fmc_networking" }
serde_json = { path = "../lib/json"}
noise = { path = "../lib/noise" }

tar = "0.4.40"
zstd = "0.12.4"
sha-1 = "0.10.1"
serde = { version = "1.0.188", features = ["derive"] }
#serde_json = "1.0.85"
bincode = "1.3.3"
typetag = "0.2.13"
futures-lite = "1.13.0"
rusqlite = { version = "0.29.0"}
rand = "0.8.5"
once_cell = "1.18.0"

[build-dependencies]
tar = "0.4.40"
zstd = "0.12.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
#strip = "debuginfo"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# flamegraph
#[profile.release]
#debug=true
