[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc1f33d", default-features=false, features = ["filesystem_watcher", "multi-threaded"]}
bevy = { version = "0.12.1", default-features=false, features = ["file_watcher", "multi-threaded"]}

fmc_networking = { path = "../crates/fmc_networking" }
serde_json = { path = "../crates/json"}
noise = { path = "../crates/fmc_noise" }

tar = "0.4.40"
zstd = "0.12.4"
sha-1 = "0.10.1"
serde = { version = "1.0.188", features = ["derive"] }
#serde_json = "1.0.85"
bincode = "1.3.3"
typetag = "0.2.13"
futures-lite = "1.13.0"
rusqlite = { version = "0.29.0"}
rand = "0.8.5"
once_cell = "1.18.0"

[build-dependencies]
tar = "0.4.40"
zstd = "0.12.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
#strip = "debuginfo"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# TODO: The procedural noise is 10-20x slower with debug assertions on. The
# standard library has some debug asserts in the vec module. Probably from the
# set_len method. Try to remove the method.
debug-assertions = false

# flamegraph
#[profile.release]
#debug=true
